# saccades

./: .gitignore  .travis.yml  README.md  TODO.md  install.sh  requirements.txt  setup.cfg  setup.py  test_requirements.txt
docs/: api.rst  conf.py  index.rst
examples/: example.ipynb  example_script.py
saccades/: __init__.py  conversions.py  dataframe.py  detection.py  gazearray.py  gazedata.py  geometry.py  metrics.py  saccadedetection.py  saccademetrics.py  tools.py
saccades/algorithms/: __init__.py
saccades/readers/: __init__.py  basereader.py  regexes.py
scripts/: build_docs.sh  check_style.sh  install.sh  install_and_test.sh  install_test.sh  test.sh
tests/: __init__.py  conftest.py  constants.py  example_script.py  helpers.py  test_BaseReader.py  test_GazeArray.py  test_GazeData.py  test_Reader.py  test_Saccade.py  test_compatibility.py  test_conversions.py  test_detection.py  test_geometry.py  test_import.py  test_init.py  test_install.sh  test_metrics.py  test_saccadedetection.py  test_saccademetrics.py  test_script.py  test_subclass_BaseReader.py  test_subclass_Reader.py  test_tools.py
tests/cases/: __init__.py  cases_conversions.py  cases_gazedata.py  gazedata.py  objects.py  readers.py  reading.py
tests/data/: README.md  example.csv  example_eyelink_events.txt  s1_actioncliptest00001.txt  tab_delimited.tsv
