[metadata]
name = saccades
version = 0.1
author = Luke Tudge
author_email = luketudge@gmail.com
license = GNU GPLv3
license_file = LICENSE.txt
description = Tools for analyzing saccades
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/luketudge/saccades
packages = saccades
python_requires = >=3.6
install_requires =
    matplotlib
    numpy>=1.16
    pandas>=0.25
    plotnine
    regex
    scipy
keywords = psychology vision eyetracking
classifiers =
    Programming Language :: Python :: 3 :: Only
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Human Machine Interfaces
    Topic :: Scientific/Engineering :: Medical Science Apps.

[flake8]
max-line-length = 99
